--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -29,6 +29,14 @@ jobs:
     steps:
       - name: Checkout .tbls.yml
         uses: actions/checkout@v3
+      - name: Install bun
+        uses: oven-sh/setup-bun@v1
+      - name: Install dependencies
+        run: bun install
+      - name: Run migrations
+        run: |
+          cp .env.example .env
+          make migrate-dev
       - uses: k1low/setup-tbls@v1
       - name: Run tbls for generate database document
         run: tbls doc
