--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/mydb?schema=public"
+
+# Or use SQLite for a simple local setup:
+# DATABASE_URL="file:./dev.db"
