ci: Update database configuration and remove unused migration table

--- a/.tbls.yml
+++ b/.tbls.yml
@@ -3,7 +3,11 @@
 # DSN (Database Source Name) to connect database
 dsn: postgres://postgres:mysecretpassword@localhost:5432/mydb?sslmode=disable
 
-# Liner settings
+# Filter
+exclude:
+  - _prisma_migrations
+
+# Linter settings
 lint:
   requireColumnComment:
     enabled: true
