--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -41,12 +41,8 @@ jobs:
       - name: Run tbls for generate database document
         run: make db-doc
 
-      - uses: actions/setup-python@v5
-      - uses: pre-commit/action@v3.0.1
-      - name: Run pre-commit
-        run: pre-commit run --all-files
-
-      - uses: stefanzweifel/git-auto-commit-action@v5
+      - name: Push changes to the repository
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore(db): auto generate docs"
           commit_user_name: "github-actions[bot]"
