--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "db-management-demo",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "generate:model": "typeorm-model-generator",
+    "dev": "tsx ./typeorm/index.ts"
+  },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/bun": "latest",
-    "prisma": "5.13.0",
-    "tsx": "4.10.2"
+    "prisma": "5.14.0",
+    "tsx": "4.10.2",
+    "typeorm-model-generator": "^0.4.6"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client": "5.13.0"
+    "@prisma/client": "5.14.0",
+    "pg": "^8.11.5",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20"
   },
   "prisma": {
     "seed": "tsx ./prisma/seed.ts"
